fix: simplified checking with set theory and subset checking

--- a/sandbox/debug_make_negative_controls.ipynb
+++ b/sandbox/debug_make_negative_controls.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "66eb2df1",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "156538ca",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1a88052f",
    "metadata": {},
    "outputs": [
@@ -1252,7 +1252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requested negative controls have already been generated or are listed in the readii index as if they have been. Set overwrite to true if you want to re-process these.\n"
+      "Requested negative controls have already been generated for these samples or are listed in the readii index as if they have been. Set overwrite to true if you want to re-process these.\n"
      ]
     }
    ],
@@ -1279,116 +1279,119 @@
     "    # 2. for all of the patients\n",
     "    readii_index = pd.read_csv(readii_index_file)\n",
     "\n",
-    "\n",
-    "    processed_image_types = readii_index[['Permutation', 'Region']].drop_duplicates().sort_values(by=['Permutation'], ignore_index=True)\n",
-    "\n",
-    "    requested_image_types = pd.DataFrame(data = itertools.product([permutation.name() for permutation in manager.negative_control_strategies],\n",
-    "                                                                  [region.name() for region in manager.region_strategies]),\n",
-    "                                         columns = ['Permutation', 'Region']).sort_values(by='Permutation', ignore_index=True)\n",
+    "    processed_image_types = {itype for itype in readii_index[['Permutation', 'Region']].itertuples(index=False, name=None)}\n",
+    "    requested_image_types = {itype for itype in itertools.product([permutation.name() for permutation in manager.negative_control_strategies],\n",
+    "                                                                  [region.name() for region in manager.region_strategies])}\n",
     "    \n",
-    "    # Check if the number of negative control types do not match\n",
-    "    if processed_image_types.size != requested_image_types.size:\n",
-    "        print(\"Different image types requested, continuing generation.\")\n",
-    "    \n",
-    "    # Check if the values of the negative control types do not match\n",
-    "    elif not (processed_image_types == requested_image_types).all(axis=None): \n",
-    "        print('Different image types requested, continuing generation.')\n",
-    "\n",
-    "    else:\n",
-    "        print(\"Requested negative controls have already been generated or are listed in the readii index as if they have been. Set overwrite to true if you want to re-process these.\")\n",
+    "    # Check if the requested image types are a subset of those already processed\n",
+    "    if requested_image_types.issubset(processed_image_types):\n",
+    "        print(\"Requested negative controls have already been generated for these samples or are listed in the readii index as if they have been. Set overwrite to true if you want to re-process these.\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "id": "f06aa9d6",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Permutation",
-         "rawType": "bool",
-         "type": "boolean"
-        },
-        {
-         "name": "Region",
-         "rawType": "bool",
-         "type": "boolean"
-        }
-       ],
-       "ref": "f4ecd6ce-7eb1-4971-ad7f-b83d09f2e32d",
-       "rows": [
-        [
-         "0",
-         "True",
-         "False"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 1
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Permutation</th>\n",
-       "      <th>Region</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Permutation  Region\n",
-       "0         True   False"
+       "{'LUNG1-001', 'LUNG1-002'}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "processed_image_types == requested_image_types"
+    "processed = readii_index['PatientID']\n",
+    "set(readii_index['PatientID'].to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e959ea90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "requested = {itype for itype in itertools.product([permutation.name() for permutation in manager.negative_control_strategies],\n",
+    "                                                                  [region.name() for region in manager.region_strategies])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "809363c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requested.issubset(processed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c1599ee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('randomized', 'full'),\n",
+       " ('randomized', 'roi'),\n",
+       " ('shuffled', 'full'),\n",
+       " ('shuffled', 'roi')}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b5fecb00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('randomized', 'full'), ('randomized', 'non_roi'), ('randomized', 'roi')}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requested"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e959ea90",
+   "id": "9af4d8d2",
    "metadata": {},
    "outputs": [],
    "source": []
