refactor: ruff fixes

--- a/workflow/notebooks/visualization/plot_prediction.ipynb
+++ b/workflow/notebooks/visualization/plot_prediction.ipynb
@@ -7,9 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
+    "from pathlib import Path\n",
+    "\n",
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "import seaborn as sns"
    ]
   },
   {
@@ -26,7 +27,7 @@
     "bootstrap_feature_path = Path(\"../../../data/results\", f\"{datasource}_{dataset}\" , \"prediction\" , signature , \"bootstrap_1000\")\n",
     "\n",
     "bootstrap_df = pd.DataFrame()\n",
-    "for feature_file in sorted(bootstrap_feature_path.rglob(pattern = f\"*.csv\")):\n",
+    "for feature_file in sorted(bootstrap_feature_path.rglob(pattern = \"*.csv\")):\n",
     "    image_type = str(feature_file.stem)\n",
     "    feature_df = pd.read_csv(feature_file, index_col=0)\n",
     "\n",
@@ -62,7 +63,6 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_figwidth(9)\n",
