refactor: update paths with cd usage

--- a/sandbox/make_cropped_image_mask_figures.ipynb
+++ b/sandbox/make_cropped_image_mask_figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "id": "b3636eda",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a7dacdc4",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "15f8536f",
    "metadata": {},
    "outputs": [
@@ -369,24 +369,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-020_0019/CT_87397384/CT.nii.gz\n",
-      "[PosixPath('../data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-020_0019/RTSTRUCT_85472787/GTV__[GTV-1].nii.gz'), PosixPath('../data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-020_0019/RTSTRUCT_85472787/GTV__[gtv-2].nii.gz'), PosixPath('../data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-020_0019/RTSTRUCT_85472787/GTV__[gtv-3].nii.gz'), PosixPath('../data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-020_0019/RTSTRUCT_85472787/GTV__[gtv-4].nii.gz')]\n"
+      "data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-294_0293/CT_74742304/CT.nii.gz\n",
+      "[PosixPath('data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-294_0293/RTSTRUCT_02337966/GTV__[GTV-1].nii.gz'), PosixPath('data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-294_0293/RTSTRUCT_02337966/GTV__[gtv-2].nii.gz'), PosixPath('data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-294_0293/RTSTRUCT_02337966/GTV__[gtv-6].nii.gz'), PosixPath('data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-294_0293/RTSTRUCT_02337966/GTV__[gtv-7].nii.gz'), PosixPath('data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/LUNG1-294_0293/RTSTRUCT_02337966/GTV__[gtv-5].nii.gz')]\n"
      ]
     }
    ],
    "source": [
-    "pat_id = \"LUNG1-020_0019\"\n",
+    "pat_id = \"LUNG1-294_0293\"\n",
     "\n",
-    "image_path = Path(f\"../data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/{pat_id}\").rglob('CT_*/CT.nii.gz').__next__()\n",
+    "image_path = Path(f\"data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/{pat_id}\").rglob('CT_*/CT.nii.gz').__next__()\n",
     "print(image_path)\n",
     "\n",
-    "mask_paths = [path for path in Path(f'../data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/{pat_id}').rglob('GTV__*.nii.gz')]\n",
+    "mask_paths = [path for path in Path(f'data/procdata/TCIA_NSCLC-Radiomics/images/mit_all_GTVs_NSCLC_Radiomics/{pat_id}').rglob('GTV__*.nii.gz')]\n",
     "print(mask_paths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "4e5159af",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "007e8b1b",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "42973323",
    "metadata": {},
    "outputs": [
@@ -428,41 +428,42 @@
        "<table style='width: 100%;'><tr><th>Header</th><th>Data Arrays</th></tr><tr><td>\n",
        "<table style='width: 100%;'>\n",
        "<tr><th>ImageData</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>14270697</td></tr>\n",
-       "<tr><td>N Points</td><td>14487552</td></tr>\n",
-       "<tr><td>X Bounds</td><td>0.000e+00, 4.992e+02</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>1.221e+02, 3.771e+02</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>0.000e+00, 3.210e+02</td></tr>\n",
-       "<tr><td>Dimensions</td><td>512, 262, 108</td></tr>\n",
-       "<tr><td>Spacing</td><td>9.770e-01, 9.770e-01, 3.000e+00</td></tr>\n",
-       "<tr><td>N Arrays</td><td>5</td></tr>\n",
+       "<tr><td>N Cells</td><td>11870019</td></tr>\n",
+       "<tr><td>N Points</td><td>12072960</td></tr>\n",
+       "<tr><td>X Bounds</td><td>0.000e+00, 4.990e+02</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>1.221e+02, 3.770e+02</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>0.000e+00, 2.670e+02</td></tr>\n",
+       "<tr><td>Dimensions</td><td>512, 262, 90</td></tr>\n",
+       "<tr><td>Spacing</td><td>9.766e-01, 9.766e-01, 3.000e+00</td></tr>\n",
+       "<tr><td>N Arrays</td><td>6</td></tr>\n",
        "</table>\n",
        "\n",
        "</td><td>\n",
        "<table style='width: 100%;'>\n",
        "<tr><th>Name</th><th>Field</th><th>Type</th><th>N Comp</th><th>Min</th><th>Max</th></tr>\n",
-       "<tr><td><b>NIFTI</b></td><td>Points</td><td>int16</td><td>1</td><td>-1.024e+03</td><td>3.071e+03</td></tr>\n",
-       "<tr><td>GTV__[GTV-1]</td><td>Points</td><td>int16</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
-       "<tr><td>GTV__[gtv-2]</td><td>Points</td><td>int16</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
-       "<tr><td>GTV__[gtv-3]</td><td>Points</td><td>int16</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
-       "<tr><td>GTV__[gtv-4]</td><td>Points</td><td>int16</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
+       "<tr><td><b>NIFTI</b></td><td>Points</td><td>int32</td><td>1</td><td>-1.024e+03</td><td>3.069e+03</td></tr>\n",
+       "<tr><td>GTV__[GTV-1]</td><td>Points</td><td>int32</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
+       "<tr><td>GTV__[gtv-2]</td><td>Points</td><td>int32</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
+       "<tr><td>GTV__[gtv-6]</td><td>Points</td><td>int32</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
+       "<tr><td>GTV__[gtv-7]</td><td>Points</td><td>int32</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
+       "<tr><td>GTV__[gtv-5]</td><td>Points</td><td>int32</td><td>1</td><td>0.000e+00</td><td>1.000e+00</td></tr>\n",
        "</table>\n",
        "\n",
        "</td></tr> </table>"
       ],
       "text/plain": [
-       "ImageData (0x326c3b100)\n",
-       "  N Cells:      14270697\n",
-       "  N Points:     14487552\n",
-       "  X Bounds:     0.000e+00, 4.992e+02\n",
-       "  Y Bounds:     1.221e+02, 3.771e+02\n",
-       "  Z Bounds:     0.000e+00, 3.210e+02\n",
-       "  Dimensions:   512, 262, 108\n",
-       "  Spacing:      9.770e-01, 9.770e-01, 3.000e+00\n",
-       "  N Arrays:     5"
+       "ImageData (0x152a0a200)\n",
+       "  N Cells:      11870019\n",
+       "  N Points:     12072960\n",
+       "  X Bounds:     0.000e+00, 4.990e+02\n",
+       "  Y Bounds:     1.221e+02, 3.770e+02\n",
+       "  Z Bounds:     0.000e+00, 2.670e+02\n",
+       "  Dimensions:   512, 262, 90\n",
+       "  Spacing:      9.766e-01, 9.766e-01, 3.000e+00\n",
+       "  N Arrays:     6"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,19 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "2fd60d82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c268b7fbeb473a99fb36075e5beeec",
+       "model_id": "0984eae576b44d80a90e1d3ff80f1c9e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50696/index.html?ui=P_0x1602e7b30_5&reconnect=auto\" class=\"pyvista…"
+       "Widget(value='<iframe src=\"http://localhost:50347/index.html?ui=P_0x30fd83bc0_2&reconnect=auto\" class=\"pyvista…"
       ]
      },
      "metadata": {},
@@ -497,13 +498,13 @@
     "pl.enable_depth_peeling(10)\n",
     "\n",
     "# Add the base image\n",
-    "pl.add_volume(\n",
-    "    image,\n",
-    "    scalars='NIFTI',\n",
-    "    cmap='gray',\n",
-    "    opacity='sigmoid_9',\n",
-    "    show_scalar_bar=False,  \n",
-    ")\n",
+    "# pl.add_volume(\n",
+    "#     image,\n",
+    "#     scalars='NIFTI',\n",
+    "#     cmap='gray',\n",
+    "#     opacity='sigmoid_9',\n",
+    "#     show_scalar_bar=False,  \n",
+    "# )\n",
     "\n",
     "colour_order = ['cyan', 'magenta', 'lime', 'yellow', 'red']\n",
     "\n",
@@ -515,7 +516,7 @@
     "            opacity='linear',\n",
     "            opacity_unit_distance=np.mean(image.spacing),\n",
     "            show_scalar_bar=False,\n",
-    "            shade = False\n",
+    "            shade = True\n",
     "        )\n",
     "\n",
     "\n",
@@ -525,6 +526,77 @@
     "# pl.camera.position = (0, 0, 0)\n",
     "pl.camera.azimuth = 0\n",
     "pl.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "743ea41a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c9d5c8ff8f6b4d32ad3badd6bc51beae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:50347/index.html?ui=P_0x3c3bb2900_17&reconnect=auto\" class=\"pyvist…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pl = pv.Plotter()\n",
+    "pl.enable_depth_peeling(10)\n",
+    "\n",
+    "_ = pl.add_volume(\n",
+    "            image,\n",
+    "            scalars = \"GTV__[gtv-5]\",\n",
+    "            cmap=['white', 'red'],\n",
+    "            opacity='linear',\n",
+    "            opacity_unit_distance=np.mean(image.spacing),\n",
+    "            show_scalar_bar=False,\n",
+    "            shade = True\n",
+    "        )\n",
+    "\n",
+    "pl.view_xz()\n",
+    "pl.camera.zoom(5)\n",
+    "pl.camera.azimuth = 0\n",
+    "pl.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fd3136b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Camera.zoom of Camera (0x36010ce20)\n",
+       "  Position:            (148.85664859790666, 357.0652169470876, 133.3202198584424)\n",
+       "  Focal Point:         (249.51171875, 249.51171875, 133.5)\n",
+       "  Parallel Projection: False\n",
+       "  Distance:            147.30658655556806\n",
+       "  Thickness:           722.655888216031\n",
+       "  Parallel Scale:      310.3540878102891\n",
+       "  Clipping Range:      (0.7233792674835146, 723.3792674835146)\n",
+       "  View Angle:          30.0\n",
+       "  Roll:                90.51991632044617>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pl.camera.zoom"
    ]
   },
   {
