--- a/sandbox/0n-feature-selection.ipynb
+++ b/sandbox/0n-feature-selection.ipynb
@@ -2,7 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "id": "a176e3b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/bhkuser/bhklab/katy/readii_2_roqc\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "96dabc4b",
    "metadata": {},
    "outputs": [],
@@ -26,6 +44,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "61bfc1f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DamplyDirs<Structure: NESTED>\n",
+       "Project Root: /home/bhkuser/bhklab/katy/readii_2_roqc\n",
+       "CONFIG       : ├── config\n",
+       "LOGS         : ├── logs\n",
+       "METADATA     : ├── metadata\n",
+       "NOTEBOOKS    : ├── workflow/notebooks\n",
+       "PROCDATA     : ├── data/procdata\n",
+       "RAWDATA      : ├── data/rawdata\n",
+       "RESULTS      : ├── data/results\n",
+       "SCRIPTS      : └── workflow/scripts"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dirs"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f41b9636",
    "metadata": {},
@@ -35,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "f5763f29",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in the configuration file\n",
-    "config = loadImageDatasetConfig(\"NSCLC-Radiomics\", Path(\"../../config/datasets\"))\n",
+    "config = loadImageDatasetConfig(\"RADCURE\", dirs.CONFIG / \"datasets\")\n",
     "\n",
     "# Initialize dataset parameters\n",
     "CLINICAL_DATA_FILE = config[\"CLINICAL\"][\"FILE\"]\n",
@@ -52,12 +100,15 @@
     "RANDOM_SEED = config['RANDOM_SEED']\n",
     "\n",
     "# train test split settings\n",
-    "TRAIN_TEST_SPLIT = config[\"READII\"][\"TRAIN_TEST_SPLIT\"]\n",
+    "TRAIN_TEST_SPLIT = config[\"ANALYSIS\"][\"TRAIN_TEST_SPLIT\"]\n",
     "\n",
     "pyradiomics_settings = config[\"EXTRACTION\"][\"CONFIG\"]\n",
     "\n",
-    "signature_dir = dirs.PROCDATA / \"signature_data\" / \"aerts_original\"\n",
-    "signature_dir.mkdir(parents=True, exist_ok=True)"
+    "signature_name = \"choi_opc_hpv_2020\"\n",
+    "signature_file = dirs.CONFIG / \"signatures\" / signature_name\n",
+    "\n",
+    "prediction_dir = dirs.RESULTS / DATASET_NAME / \"prediction\" / signature_name\n",
+    "prediction_dir.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -96,7 +147,7 @@
    ],
    "source": [
     "# Load clinical data file\n",
-    "raw_clinical_data = loadFileToDataFrame((dirs.RAWDATA / DATASET_NAME / \"clinical\" / CLINICAL_DATA_FILE))\n",
+    "raw_clinical_data = loadFileToDataFrame((dirs.PROCDATA / DATASET_NAME / \"clinical\" / \"OPC_only_RADCURE_Clinical_20250731.csv\"))\n",
     "clinical_pat_id = getPatientIdentifierLabel(raw_clinical_data)\n",
     "\n",
     "if TRAIN_TEST_SPLIT['split']:\n",
@@ -469,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -483,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
