refactor: dev work for different functions

--- a/sandbox/dev_correlate.ipynb
+++ b/sandbox/dev_correlate.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "64b6e42e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/bhkuser/bhklab/katy/readii_2_roqc\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.12.11' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/home/bhkuser/bhklab/katy/readii_2_roqc/.pixi/envs/default/bin/python -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
@@ -20,10 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "e34f293c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.12.11' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/home/bhkuser/bhklab/katy/readii_2_roqc/.pixi/envs/default/bin/python -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from readii_2_roqc.utils.loaders import load_dataset_config\n",
@@ -73318,7 +73332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
