feat: add more code for summarizing demographic data for Table 1

--- a/sandbox/demographic_summary.ipynb
+++ b/sandbox/demographic_summary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "8a9f3be1",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/katyscott/Documents/BHKLab_GitHub/readii_2_roqc\n"
+      "/home/bhkuser/bhklab/katy\n"
      ]
     }
    ],
@@ -20,84 +20,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "99d6110f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from damply import dirs\n",
-    "from pathlib import Path\n",
-    "from readii.io.loaders.general import loadFileToDataFrame"
+    "from readii.process.subset import getPatientIntersectionDataframes\n",
+    "from readii.io.loaders.general import loadFileToDataFrame\n",
+    "from readii_2_roqc.utils.metadata import insert_r2r_index\n",
+    "from readii_2_roqc.utils.loaders import load_dataset_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "id": "36ffd43a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clinical_file = dirs.RAWDATA / \"TCIA_HEAD-NECK-RADIOMICS-HN1/clinical/Copy of HEAD-NECK-RADIOMICS-HN1 Clinical data updated July 2020.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "a800fefc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clinical_data = loadFileToDataFrame(clinical_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "53094bd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "137"
+       "2994"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "dataset = 'RADCURE'\n",
+    "clinical_file = dirs.PROCDATA / \"TCIA_RADCURE/clinical/RADCURE_Clinical_GTVp_20250928.csv\"\n",
+    "clinical_data = loadFileToDataFrame(clinical_file)\n",
     "len(clinical_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "10d3b0c6",
+   "execution_count": null,
+   "id": "2f7e182a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_file = dirs.RESULTS / \"TCIA_NSCLC-Radiomics/features/pyradiomics/pyradiomics_h4h_all_images_features/original_full_features.csv\"\n",
+    "feature_data = loadFileToDataFrame(feature_file)\n",
+    "len(feature_data)\n",
+    "\n",
+    "data_config, _, _ = load_dataset_config(dataset)\n",
+    "clinical_data = insert_r2r_index(data_config, clinical_data)\n",
+    "\n",
+    "clinical_data.set_index('SampleID', inplace=True)\n",
+    "feature_data.set_index('SampleID', inplace=True)\n",
+    "\n",
+    "clinical_subset, feature_subset = getPatientIntersectionDataframes(clinical_data, feature_data, False, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ca72cb87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['id', 'index_tumour_location', 'age_at_diagnosis', 'biological_sex',\n",
-       "       'performance_status_ecog', 'overall_hpv_p16_status', 'clin_t', 'clin_n',\n",
-       "       'clin_m', 'ajcc_stage', 'pretreat_hb_in_mmolperlitre',\n",
-       "       'cancer_surgery_performed', 'chemotherapy_given',\n",
-       "       'radiotherapy_total_treat_time',\n",
-       "       'radiotherapy_refgydose_perfraction_highriskgtv',\n",
-       "       'radiotherapy_refgydose_total_highriskgtv',\n",
-       "       'radiotherapy_number_fractions_highriskgtv', 'event_overall_survival',\n",
-       "       'overall_survival_in_days', 'event_recurrence_metastatic_free_survival',\n",
-       "       'recurrence_metastatic_free_survival_in_days', 'event_local_recurrence',\n",
-       "       'local_recurrence_in_days', 'event_locoregional_recurrence',\n",
-       "       'locoregional_recurrence_in_days', 'event_distant_metastases',\n",
-       "       'distant_metastases_in_days'],\n",
+       "421"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(clinical_subset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b756a2ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['patient_id', 'Age', 'Sex', 'ECOG PS', 'Smoking PY', 'Smoking Status',\n",
+       "       'Ds Site', 'Subsite', 'T', 'N', 'M ', 'Stage', 'Path', 'HPV',\n",
+       "       'Tx Modality', 'Chemo', 'RT Start', 'Dose', 'Fx', 'Last FU', 'Status',\n",
+       "       'Length FU', 'Date of Death', 'Cause of Death', 'Local', 'Date Local',\n",
+       "       'Regional', 'Date Regional', 'Distant', 'Date Distant', '2nd Ca',\n",
+       "       'Date 2nd Ca', 'RADCURE-challenge', 'ContrastEnhanced'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
+   "id": "ed669909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1448914/28227427.py:5: FutureWarning: The behavior of array concatenation with empty entries is deprecated. In a future version, this will no longer exclude empty items when determining the result dtype. To retain the old behavior, exclude the empty entries before the concat operation.\n",
+      "  demographic_summary = pd.concat([demographic_summary, clinical_data[col].value_counts(dropna=False)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = ['Sex', 'Smoking Status', 'Ds Site', 'T', 'N', 'Stage', 'HPV', 'Tx Modality', 'Status']\n",
+    "demographic_summary = pd.Series(dtype=object)\n",
+    "\n",
+    "for col in columns:\n",
+    "    demographic_summary = pd.concat([demographic_summary, clinical_data[col].value_counts(dropna=False)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "caa66936",
    "metadata": {},
    "outputs": [
@@ -117,7 +159,7 @@
       "application/vnd.microsoft.datawrangler.viewer.v0+json": {
        "columns": [
         {
-         "name": "chemotherapy_given",
+         "name": "Status",
          "rawType": "object",
          "type": "string"
         },
@@ -127,62 +169,59 @@
          "type": "integer"
         }
        ],
-       "ref": "9a3f271a-51bc-482d-b537-569bde172d47",
+       "ref": "abb3e872-1d48-4562-85f8-0fe138aaa876",
        "rows": [
         [
-         "none",
-         "100"
+         "Alive",
+         "1987"
         ],
         [
-         "concomitant",
-         "26"
-        ],
-        [
-         "concurrent",
-         "11"
+         "Dead",
+         "1007"
         ]
        ],
        "shape": {
         "columns": 1,
-        "rows": 3
+        "rows": 2
        }
       },
       "text/plain": [
-       "chemotherapy_given\n",
-       "none           100\n",
-       "concomitant     26\n",
-       "concurrent      11\n",
+       "Status\n",
+       "Alive    1987\n",
+       "Dead     1007\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clinical_data['chemotherapy_given'].value_counts(dropna=False)"
+    "clinical_data['Status'].value_counts(dropna=False).sort_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "id": "a5afb342",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(91.7043)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age:\n",
+      "61.9 (15.6 - 90.0)\n"
+     ]
     }
    ],
    "source": [
-    "clinical_data['age'].max()"
+    "import numpy as np\n",
+    "age_col = clinical_data['Age']\n",
+    "\n",
+    "print(\"Age:\")\n",
+    "print(f\"{np.round(age_col.median(), 1)} ({np.round(age_col.min(), 1)} - {np.round(age_col.max(), 1)})\")"
    ]
   },
   {
