feat: add code for Volume only CPH modelling

--- a/sandbox/run_analysis.ipynb
+++ b/sandbox/run_analysis.ipynb
@@ -22,25 +22,33 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/bhkuser1/katy/readii_2_roqc/.pixi/envs/default/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "/home/bhkuser/bhklab/katy/readii_2_roqc\n"
      ]
     }
    ],
+   "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from damply import dirs\n",
     "from readii.analyze.correlation import getFeatureCorrelations, getSelfCorrelations\n",
-    "from readii.io.loaders import loadFeatureFilesFromImageTypes, loadImageDatasetConfig\n",
+    "from readii.io.loaders import loadFeatureFilesFromImageTypes\n",
     "from readii.io.writers.correlation_writer import CorrelationWriter\n",
     "from readii.process.config import get_full_data_name\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
-    "\n",
-    "\n",
+    "from readii_2_roqc.utils.loaders import load_dataset_config\n",
+    "from pathlib import Path\n",
     "# from palettable.colorbrewer.diverging import PuOr_4\n",
     "\n",
     "# import sys; sys.path.append(\"code\")\n",
@@ -56,15 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = \"NSCLC-Radiomics_test\"\n",
-    "dataset_config = loadImageDatasetConfig(\"NSCLC-Radiomics_test\", dirs.CONFIG / \"datasets\")\n",
-    "\n",
-    "DATASET_NAME = dataset_config['DATASET_NAME']\n",
-    "full_data_name = get_full_data_name(dirs.CONFIG / \"datasets\" / dataset)\n",
+    "dataset = \"NSCLC-Radiomics\"\n",
+    "dataset_config, dataset_name, full_data_name = load_dataset_config(dataset)\n",
     "\n",
     "readii_config = dataset_config['READII']\n",
     "\n",
@@ -82,19 +87,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/bhkuser/bhklab/katy/readii_2_roqc/data/results/TCIA_NSCLC-Radiomics/features/pyradiomics/pyradiomics_h4h_all_images_features')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_type = dataset_config['EXTRACTION']['METHOD']\n",
-    "settings_name = dataset_config['EXTRACTION']['SETTINGS']\n",
+    "settings_name = Path(dataset_config['EXTRACTION']['CONFIG']).stem\n",
     "\n",
     "correlations_dir = dirs.PROCDATA / full_data_name / \"correlations\" / feature_type / settings_name\n",
     "\n",
     "corr_figures_path = dirs.RESULTS / full_data_name / \"correlation_figures\" / feature_type / settings_name\n",
     "\n",
     "# Set features input directory\n",
-    "features_dir = dirs.RESULTS / full_data_name / settings_name\n"
+    "features_dir = dirs.RESULTS / full_data_name / \"features\" / feature_type / settings_name\n",
+    "\n",
+    "features_dir"
    ]
   },
   {
@@ -106,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the extracted feature data\n",
     "# This makes a dictionary of feature sets, with the image type as the keys\n",
     "extracted_feature_sets = loadFeatureFilesFromImageTypes(extracted_feature_dir=features_dir,\n",
-    "                                                        image_types = ([\"original\"] + negative_control_list), \n",
+    "                                                        image_types = ([\"original\"]), \n",
     "                                                        drop_labels = False)"
    ]
   },
@@ -133,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up writers for correlation and plots\n",
     "corr_matrix_writer = CorrelationWriter(\n",
     "    root_directory = correlations_dir / \"matrix\",\n",
-    "    filename_format = DATASET_NAME + \"_{VerticalFeatureType}_{HorizontalFeatureType}_{CorrelationType}_correlations.csv\",\n",
+    "    filename_format = dataset_name + \"_{VerticalFeatureType}_{HorizontalFeatureType}_{CorrelationType}_correlations.csv\",\n",
     "    overwrite = False,\n",
     "    create_dirs = True\n",
     ")"
@@ -155,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +280,7 @@
     "correlation_method = \"pearson\"\n",
     "\n",
     "# Colormap to use for plots\n",
-    "heatmap_cmap = PuOr_4.mpl_colormap\n",
+    "heatmap_cmap = \"cool\"\n",
     "\n",
     "# initialize clustering id array\n",
     "clustering = np.array([])\n",
@@ -435,7 +453,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
